k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journals-frontend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: "journals-frontend"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
