k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: journals-frontend-ingress
spec:
  backend:
    serviceName: journals-frontend
    servicePort: 80
